--- a/Final.ipynb
+++ b/Final.ipynb
@@ -1644,6 +1644,62 @@
           "execution_count": 59
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.keras.models.save_model(model, 'content/modelo')"
+      ],
+      "metadata": {
+        "id": "WMpcDNOBxI3v",
+        "outputId": "4f099014-4bf1-4d9f-b428-abcfd0d33af3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "INFO:tensorflow:Assets written to: content/modelo/assets\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.keras.models.load_model()"
+      ],
+      "metadata": {
+        "id": "riWcl0eTyTpb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save('content/modelo.h5')"
+      ],
+      "metadata": {
+        "id": "SL3frW6LzCui"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model= tf.keras.models.load_model(\"content/modelo.h5\")"
+      ],
+      "metadata": {
+        "id": "-Nnv10Uf0nE1"
+      },
+      "execution_count": 64,
+      "outputs": []
     }
   ]
 }
