--- a/Final.ipynb
+++ b/Final.ipynb
@@ -35,22 +35,13 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np # linear algebra\n",
-        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "import numpy as np\n",
+        "import pandas as pd \n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from os import listdir\n",
         "from skimage import io\n",
         "\n",
-        "\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "\n",
-        "\n",
-        "\n",
-        "import itertools\n",
         "\n",
         "from keras.utils.np_utils import to_categorical # convert to one-hot-encoding\n",
         "from keras.models import Sequential\n",
@@ -58,8 +49,7 @@
         "\n",
         "import tensorflow as tf\n",
         "\n",
-        "from keras.preprocessing.image import ImageDataGenerator\n",
-        "from keras.callbacks import ReduceLROnPlateau"
+        "from keras.preprocessing.image import ImageDataGenerator\n"
       ]
     },
     {
@@ -1055,55 +1045,10 @@
     {
       "cell_type": "code",
       "source": [
-        "tf.keras.models.save_model(model, 'content/modelo')"
-      ],
-      "metadata": {
-        "id": "WMpcDNOBxI3v",
-        "outputId": "4f099014-4bf1-4d9f-b428-abcfd0d33af3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "INFO:tensorflow:Assets written to: content/modelo/assets\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tf.keras.models.load_model()"
-      ],
-      "metadata": {
-        "id": "riWcl0eTyTpb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "model.save('content/modelo.h5')"
       ],
       "metadata": {
         "id": "SL3frW6LzCui"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model= tf.keras.models.load_model(\"content/modelo.h5\")"
-      ],
-      "metadata": {
-        "id": "-Nnv10Uf0nE1"
       },
       "execution_count": null,
       "outputs": []
