--- a/Transference_Learning.ipynb
+++ b/Transference_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Transference_Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxpo8Mj8szBJ0ObcJZWhVl",
+      "authorship_tag": "ABX9TyMQg0/V7ddj9CuD2fd8BLrE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "hPin9CnLYPyf"
       },
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "7XsWqImtYTvV"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "ZNTSLFWEYWsE"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "vEgYWbgeYbcc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
       "metadata": {
         "id": "mqKZKYYuYdOF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "dNWfPKXzYeu1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "ss7yt35-YgqF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
       "metadata": {
         "id": "HljA5yLJaExm"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "3gl6HuaaaExm"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
       "metadata": {
         "id": "5i6aw8YUaExm"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -359,7 +359,7 @@
       "metadata": {
         "id": "7ywNcpuuaExm"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "zOyzhx2PaExn"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
       "metadata": {
         "id": "0z7VJGUxaExn"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +401,7 @@
       "metadata": {
         "id": "FTtgcBSAC5l8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -412,7 +412,7 @@
       "metadata": {
         "id": "EXqau15gC6_z"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "tViKtKxEC62O"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "3_qOqw6SC6sr"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +445,7 @@
       "metadata": {
         "id": "XTzeojInC6ik"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +456,7 @@
       "metadata": {
         "id": "O-6dzmVZC6X_"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "gsTTqhobEm9C"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +493,7 @@
       "metadata": {
         "id": "9ZLdBXC6Eqtd"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
       "metadata": {
         "id": "yPGctJQ3EqkP"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
       "metadata": {
         "id": "IRdeuiMlEqZ6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +535,7 @@
       "metadata": {
         "id": "1ljc7NN4EqON"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +549,7 @@
       "metadata": {
         "id": "F3LQV8DuEp56"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
       "metadata": {
         "id": "NIDwcyUXTSHA"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +577,7 @@
       "metadata": {
         "id": "-4lRhKxkViAC"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +607,7 @@
       "metadata": {
         "id": "NNkEf7orZcyq"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +622,7 @@
         "id": "PNJ5dIS2Z7PV",
         "outputId": "96382adf-d2f4-4c1f-8110-9e58b64814ad"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,33 +651,27 @@
       "metadata": {
         "id": "OgTpEfs1cTr1"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Segun que modelo quieras utilizar ejecuta la primera(mi propia red) o la segunda(ResNet50) celda justo debajo de esta"
+      ],
+      "metadata": {
+        "id": "2ZdPccpFXaJV"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "modelo_pre= tf.keras.models.load_model('sample_data/modelos/modelo.h5')\n",
-        "\n",
-        "extractor_características = modelo_pre.output"
+        "modelo_pre= tf.keras.models.load_model('sample_data/modelos/modelo.h5')"
       ],
       "metadata": {
         "id": "g6EbR_QAa8A7"
       },
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for layer in modelo_pre.layers: layer.trainable = False\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "_iuCvsXMc1Iv"
-      },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -685,11 +679,21 @@
       "source": [
         "from tensorflow.keras.applications import ResNet50\n",
         "\n",
-        "modelo_pro = ResNet50()\n",
-        "\n"
+        "modelo_pre = ResNet50()"
       ],
       "metadata": {
         "id": "gdsT6Kbac1Ba"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for layer in modelo_pre.layers: layer.trainable = False"
+      ],
+      "metadata": {
+        "id": "_iuCvsXMc1Iv"
       },
       "execution_count": null,
       "outputs": []
@@ -714,7 +718,7 @@
       "metadata": {
         "id": "LYWgL3TxeIRV"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -740,7 +744,7 @@
         "id": "hCAUKIuDe2i4",
         "outputId": "984c40f5-5c13-443f-a5a7-0aefd2ae7ef4"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +787,7 @@
       "metadata": {
         "id": "vkGUVXg4blNc"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +801,7 @@
       "metadata": {
         "id": "_g-QFGbE4QIM"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -814,7 +818,7 @@
       "metadata": {
         "id": "gmeloJrp4T1T"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +833,7 @@
         },
         "outputId": "54db4869-418a-449d-f08e-039b4a51b5d9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +891,7 @@
       "metadata": {
         "id": "lnrdxWhk4jnK"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -919,7 +923,7 @@
         },
         "outputId": "9a5272e8-6bf0-4857-c590-7c440850766d"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,7 +992,7 @@
         },
         "outputId": "ef2a97d8-c815-4db7-ee28-966e9e678fbc"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,17 +1031,6 @@
           "execution_count": 59
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model= tf.keras.models.load_model(\"content/modelo.h5\")"
-      ],
-      "metadata": {
-        "id": "-Nnv10Uf0nE1"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
