--- a/Transference_Learning.ipynb
+++ b/Transference_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Transference_Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQg0/V7ddj9CuD2fd8BLrE",
+      "authorship_tag": "ABX9TyNGtdw7pA44Rs5cq3ZR3M93",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,17 +41,8 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from os import listdir\n",
         "from skimage import io\n",
         "\n",
-        "\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "\n",
-        "\n",
-        "\n",
-        "import itertools\n",
         "\n",
         "from keras.utils.np_utils import to_categorical # convert to one-hot-encoding\n",
         "from keras.models import Sequential\n",
@@ -59,8 +50,7 @@
         "\n",
         "import tensorflow as tf\n",
         "\n",
-        "from keras.preprocessing.image import ImageDataGenerator\n",
-        "from keras.callbacks import ReduceLROnPlateau"
+        "from keras.preprocessing.image import ImageDataGenerator\n"
       ]
     },
     {
@@ -703,6 +693,7 @@
       "source": [
         "model = Sequential()\n",
         "model.add(modelo_pre)\n",
+        "model.add(Flatten())\n",
         "model.add(Dense(64, activation='relu'))\n",
         "\n",
         "\n",
